<resources>
    <string name="app_name" translatable="false">NoteUI</string>

    <!-- Preference Strings -->
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="notes">Notes</string>
    <string name="preferencesIsShowAddNoteFABText">Show Add note button text</string>
    <string name="preferencesIsHideActionBarOnScroll">Hide actionbar while scrolling</string>
    <string name="preferencesDisableDrawerMenuAnimation">Disable side menu animation when number of characters is more than</string>
    <string name="titleTextSize">Title text size</string>
    <string name="contentTextSize">Content text size</string>
    <string name="version">Version %1$s</string>
    <string name="another">Another</string>

    <string name="settings_theme_summary">Blue</string>
    <string name="settings_language_default_value">en</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in.</string>
    <string name="lorem_ipsumX2" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in.</string>
    <string name="lorem_ipsumX3" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in dolor non orci congue auctor. Duis a pretium arcu. Integer eu massa vehicula, aliquam turpis at, pretium risus. Sed et luctus risus, ac venenatis lectus. Quisque eget maximus ex. Nam dictum varius sem, non dictum augue fermentum in</string>

    <!--  Search strings -->
    <string name="search">Search</string>
    <string name="search_hint">Search a note…</string>

    <!-- Select strings -->
    <string name="select_all">Select all</string>

    <!-- activity_note strings -->
    <string name="title">Title…</string>
    <string name="content">Content…</string>
    <string name="addFabDescription">Add new note</string>
    <string name="addColor">Add new color</string>
    <string name="remove">Remove</string>
    <string name="removeAll">Remove all</string>

    <!-- Note drawer menu_main strings -->
    <string name="note">Note</string>
    <string name="changeBackground">Change background</string>
    <string name="show_transparent_actionbar">Show transparent actionBar</string>
    <string name="findImage">Find image…</string>
    <string name="selectColor">Select color</string>
    <string name="reset">Reset</string>
    <string name="color">Color</string>
    <string name="image">Image</string>
    <string name="selectImage">Select image</string>
    <string name="embeddedImages">Embedded images</string>
    <string name="colors">Colors</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <!-- MainActivity strings  -->
    <string name="addNote">Add note</string>
    <string name="snackbar_undo_title">Notes have been removed: </string>
    <string name="filter">Filter</string>

    <!-- ImagePicker strings  -->
    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="permission_camera_denied">
        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>

    <!-- uCrop string resource start -->
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>

    <string name="dismiss">Dismiss</string>
    <string name="select">Select</string>
    <string name="ok" translatable="false">OK</string>
    <string name="successfully">Successfully</string>
    <string name="myNumber">My number</string>

    <string name="emptyRecyclerView">Empty. Add an item using the button</string>
    <string name="notesNotFound">Couldn\'t find the searched notes</string>

    <!--  content_description  -->
    <string name="bold_description">Bold</string>
    <string name="italic_description">Italic</string>
    <string name="underline_description">Underline</string>
    <string name="foreground_description">Foreground color</string>
    <string name="gravity_description">Gravity</string>
    <string name="background_description">Background</string>
    <string name="add_image_description">Add Image</string>
    <string name="colors_clear_description">Set default color</string>
    <string name="close_description">Close</string>
    <string name="gravity_start_description">Start</string>
    <string name="gravity_center_description">Center</string>
    <string name="gravity_end_description">End</string>
</resources>