<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="@dimen/mediumMargin"
    android:layout_gravity="bottom|center_horizontal">

    <LinearLayout
        android:id="@+id/addButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="?android:textColor"
            android:textSize="@dimen/mediumText"
            app:cornerRadius="0dp"
            app:rippleColor="?colorControlHighlight"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removeAll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/removeAll"
            android:textAllCaps="true"
            android:textColor="?android:textColor"
            android:textSize="@dimen/mediumText"
            app:cornerRadius="0dp"
            app:rippleColor="?colorControlHighlight"
            app:strokeWidth="0dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/remove"
            android:textAllCaps="true"
            android:textColor="?android:textColor"
            android:textSize="@dimen/mediumText"
            app:cornerRadius="0dp"
            app:rippleColor="?colorControlHighlight"
            app:strokeWidth="0dp" />
    </FrameLayout>
</FrameLayout>