<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/drawerMenuParentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/ripple_color_primary"
            android:id="@+id/expandChangeBackgroundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_show_less_animated"
            android:focusable="true"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/changeBackgroundButtonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeBackground"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/changeBackgroundButtonImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/changeBackgroundButtonImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_show_more_animated"
                app:layout_constraintBottom_toBottomOf="@id/changeBackgroundButtonTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/changeBackgroundButtonTextView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/changeBackgroundExpandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false"
            app:el_parallax="0.5"
            tools:el_expanded="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/drawerMenuSelectImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/selectImage"/>

                <Button
                    android:id="@+id/drawerMenuResetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/reset" />

                <TextView
                    android:id="@+id/menu_left_drawer_select_image_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/embeddedImages" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/imageRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:listitem="@layout/image_item" />


            </LinearLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTransparentActionBarSwitchCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_color_primary"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/show_transparent_actionbar"
                tools:checked="true" />
        </LinearLayout>

    </LinearLayout>
</layout>