<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/mediumMargin"
    android:layout_marginTop="@dimen/mediumMargin"
    android:layout_marginEnd="@dimen/mediumMargin"
    android:layout_marginBottom="@dimen/mediumMargin"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="@dimen/bigCorners"
    app:strokeColor="@android:color/white"
    app:strokeWidth="@dimen/stroke">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dialog_minWidth"
        android:minHeight="@dimen/dialog_minHeight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="@string/addColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/colorPicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:preferenceName="addNewColorCPV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="@dimen/bigMargin"
                android:gravity="center"
                android:text="@string/action_cancel"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/ok"
                app:layout_constraintEnd_toStartOf="@id/ok"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ok" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/bigMargin"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>